tests/e2e/null_comparison.error
Error: syntax error in story at line 2, column 5

2|    b = a < 1
          ^^^^^

E0123: `null` can't be compared with `int`
