tests/e2e/null_comparison.story
a = null
b = a < 1
